# FastMessageMuteSystem

./: .gitignore  README.md  config.example.toml  config.toml  pyproject.toml
src/: __init__.py  config.py  handler.py  main.py  napcat_client.py  spam_detector.py
